// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiStepIndicator renders correctly with className 1`] = `
<ol
  className="multi-step-indicator--wrapper test"
>
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-fulfilled clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-fulfilled__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-fulfilled__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-fulfilled__number-container__text"
        >
          <svg
            aria-hidden={true}
            className="icon_component monday-style-step-indicator-component__number-container__text__check-icon icon_component--no-focus-style"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-fulfilled__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-fulfilled__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-fulfilled__text-container__title__text"
        >
          Title
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-fulfilled__text-container__subtitle__text"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="monday-style-divider multi-step-indicator--wrapper__divider monday-style-divider--horizontal"
  />
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-active clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-active__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-active__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-active__number-container__text"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-active__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-active__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-active__text-container__title__text"
        >
          Active
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-active__text-container__subtitle__text"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="monday-style-divider multi-step-indicator--wrapper__divider monday-style-divider--horizontal"
  />
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-pending clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-pending__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-pending__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-pending__number-container__text"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-pending__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-pending__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-pending__text-container__title__text"
        >
          Pending
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-pending__text-container__subtitle__text"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with dividerComponentClassName 1`] = `
<ol
  className="multi-step-indicator--wrapper"
>
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-fulfilled clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-fulfilled__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-fulfilled__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-fulfilled__number-container__text"
        >
          <svg
            aria-hidden={true}
            className="icon_component monday-style-step-indicator-component__number-container__text__check-icon icon_component--no-focus-style"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-fulfilled__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-fulfilled__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-fulfilled__text-container__title__text"
        >
          Title
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-fulfilled__text-container__subtitle__text"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="monday-style-divider multi-step-indicator--wrapper__divider test monday-style-divider--horizontal"
  />
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-active clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-active__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-active__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-active__number-container__text"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-active__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-active__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-active__text-container__title__text"
        >
          Active
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-active__text-container__subtitle__text"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="monday-style-divider multi-step-indicator--wrapper__divider test monday-style-divider--horizontal"
  />
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-pending clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-pending__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-pending__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-pending__number-container__text"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-pending__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-pending__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-pending__text-container__title__text"
        >
          Pending
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-pending__text-container__subtitle__text"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with empty props 1`] = `
<ol
  className="multi-step-indicator--wrapper"
/>
`;

exports[`MultiStepIndicator renders correctly with fulfilledStepIcon 1`] = `
<ol
  className="multi-step-indicator--wrapper"
>
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-fulfilled clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-fulfilled__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-fulfilled__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-fulfilled__number-container__text"
        >
          <svg
            aria-hidden={true}
            className="icon_component monday-style-step-indicator-component__number-container__text__check-icon icon_component--no-focus-style"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M5.7205 3.22905C5.8506 3.08332 6.03668 3 6.23203 3H14.2113C14.4224 3 14.6217 3.09723 14.7516 3.26359L17.8547 7.23601C18.053 7.48988 18.0478 7.84757 17.8423 8.09563L10.528 16.9232C10.3977 17.0804 10.2042 17.1714 10 17.1714C9.79582 17.1714 9.60226 17.0804 9.47198 16.9232L2.1577 8.09563C1.94134 7.8345 1.94835 7.45444 2.17418 7.20147L5.7205 3.22905ZM5.95682 5.02365L6.60922 6.97241H4.21709L5.95682 5.02365ZM4.14439 8.34384H7.03991L8.48766 13.5857L4.14439 8.34384ZM11.5123 13.5857L15.8556 8.34384H12.9601L11.5123 13.5857ZM11.5373 8.34384L10 13.91L8.46268 8.34384H11.5373ZM13.4951 6.97241H15.9085L14.3727 5.00631L13.4951 6.97241ZM13.1542 4.37143H7.18472L8.05546 6.97241H11.9932L13.1542 4.37143Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-fulfilled__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-fulfilled__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-fulfilled__text-container__title__text"
        >
          Title
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-fulfilled__text-container__subtitle__text"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="monday-style-divider multi-step-indicator--wrapper__divider monday-style-divider--horizontal"
  />
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-active clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-active__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-active__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-active__number-container__text"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-active__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-active__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-active__text-container__title__text"
        >
          Active
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-active__text-container__subtitle__text"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="monday-style-divider multi-step-indicator--wrapper__divider monday-style-divider--horizontal"
  />
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-pending clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-pending__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-pending__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-pending__number-container__text"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-pending__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-pending__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-pending__text-container__title__text"
        >
          Pending
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-pending__text-container__subtitle__text"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with isFulfilledStepDisplayNumber 1`] = `
<ol
  className="multi-step-indicator--wrapper"
>
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-fulfilled clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-fulfilled__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-fulfilled__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-fulfilled__number-container__text"
        >
          1
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-fulfilled__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-fulfilled__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-fulfilled__text-container__title__text"
        >
          Title
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-fulfilled__text-container__subtitle__text"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="monday-style-divider multi-step-indicator--wrapper__divider monday-style-divider--horizontal"
  />
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-active clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-active__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-active__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-active__number-container__text"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-active__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-active__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-active__text-container__title__text"
        >
          Active
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-active__text-container__subtitle__text"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="monday-style-divider multi-step-indicator--wrapper__divider monday-style-divider--horizontal"
  />
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-pending clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-pending__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-pending__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-pending__number-container__text"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-pending__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-pending__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-pending__text-container__title__text"
        >
          Pending
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-pending__text-container__subtitle__text"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with stepComponentClassName 1`] = `
<ol
  className="multi-step-indicator--wrapper"
>
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-fulfilled test clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-fulfilled__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-fulfilled__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-fulfilled__number-container__text"
        >
          <svg
            aria-hidden={true}
            className="icon_component monday-style-step-indicator-component__number-container__text__check-icon icon_component--no-focus-style"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-fulfilled__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-fulfilled__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-fulfilled__text-container__title__text"
        >
          Title
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-fulfilled__text-container__subtitle__text"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="monday-style-divider multi-step-indicator--wrapper__divider monday-style-divider--horizontal"
  />
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-active test clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-active__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-active__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-active__number-container__text"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-active__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-active__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-active__text-container__title__text"
        >
          Active
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-active__text-container__subtitle__text"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="monday-style-divider multi-step-indicator--wrapper__divider monday-style-divider--horizontal"
  />
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-pending test clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-pending__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-pending__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-pending__number-container__text"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-pending__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-pending__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-pending__text-container__title__text"
        >
          Pending
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-pending__text-container__subtitle__text"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with steps 1`] = `
<ol
  className="multi-step-indicator--wrapper"
>
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-fulfilled clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-fulfilled__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-fulfilled__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-fulfilled__number-container__text"
        >
          <svg
            aria-hidden={true}
            className="icon_component monday-style-step-indicator-component__number-container__text__check-icon icon_component--no-focus-style"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-fulfilled__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-fulfilled__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-fulfilled__text-container__title__text"
        >
          Title
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-fulfilled__text-container__subtitle__text"
      >
        Subtitle
      </span>
    </div>
  </li>
  <div
    className="monday-style-divider multi-step-indicator--wrapper__divider monday-style-divider--horizontal"
  />
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-active clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-active__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-active__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-active__number-container__text"
        >
          2
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-active__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-active__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-active__text-container__title__text"
        >
          Active
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-active__text-container__subtitle__text"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <div
    className="monday-style-divider multi-step-indicator--wrapper__divider monday-style-divider--horizontal"
  />
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-pending clickable monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-pending__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-pending__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-pending__number-container__text"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-pending__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-pending__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-pending__text-container__title__text"
        >
          Pending
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-pending__text-container__subtitle__text"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;

exports[`MultiStepIndicator renders correctly with textPlacement vertical 1`] = `
<ol
  className="multi-step-indicator--wrapper"
>
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-fulfilled clickable monday-style-step-indicator-component--text-placement-vertical monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-fulfilled__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-fulfilled__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-fulfilled__number-container__text"
        >
          <svg
            aria-hidden={true}
            className="icon_component monday-style-step-indicator-component__number-container__text__check-icon icon_component--no-focus-style"
            fill="currentColor"
            height="16"
            onClick={[Function]}
            viewBox="0 0 20 20"
            width="16"
          >
            <path
              clipRule="evenodd"
              d="M8.53033 14.2478L8 13.7175L7.46967 14.2478C7.76256 14.5407 8.23744 14.5407 8.53033 14.2478ZM8 12.6569L4.53033 9.18718C4.23744 8.89429 3.76256 8.89429 3.46967 9.18718C3.17678 9.48008 3.17678 9.95495 3.46967 10.2478L7.46967 14.2478L8 13.7175L8.53033 14.2478L16.2478 6.53033C16.5407 6.23743 16.5407 5.76256 16.2478 5.46967C15.955 5.17677 15.4801 5.17677 15.1872 5.46967L8 12.6569Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <div
        className="monday-style-divider multi-step-indicator--wrapper__divider monday-style-divider--horizontal"
      />
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-fulfilled__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-fulfilled__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          fulfilled
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-fulfilled__text-container__title__text"
        >
          Title
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-fulfilled__text-container__subtitle__text"
      >
        Subtitle
      </span>
    </div>
  </li>
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-active clickable monday-style-step-indicator-component--text-placement-vertical monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-active__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-active__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-active__number-container__text"
        >
          2
        </span>
      </div>
      <div
        className="monday-style-divider multi-step-indicator--wrapper__divider monday-style-divider--horizontal"
      />
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-active__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-active__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          active
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-active__text-container__title__text"
        >
          Active
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-active__text-container__subtitle__text"
      >
        Active Subtitle
      </span>
    </div>
  </li>
  <li
    className="monday-style-clickable monday-style-step-indicator-component monday-style-step-indicator-component--type-primary monday-style-step-indicator-component--status-pending clickable monday-style-step-indicator-component--text-placement-vertical monday-style-clickable--disable-text-selection"
    data-testid="clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex="-1"
  >
    <div
      className="monday-style-step-indicator-component__number-divider-container monday-style-step-indicator-component--type-primary__number-divider-container monday-style-step-indicator-component--status-pending__number-divider-container"
    >
      <div
        className="monday-style-step-indicator-component__number-container monday-style-step-indicator-component--type-primary__number-container monday-style-step-indicator-component--status-pending__number-container"
        role="button"
        tabIndex="0"
      >
        <span
          className="monday-style-step-indicator-component__number-container__text monday-style-step-indicator-component--type-primary__number-container__text monday-style-step-indicator-component--status-pending__number-container__text"
        >
          3
        </span>
      </div>
    </div>
    <div
      className="monday-style-step-indicator-component__text-container monday-style-step-indicator-component--type-primary__text-container monday-style-step-indicator-component--status-pending__text-container"
    >
      <div
        className="monday-style-step-indicator-component__text-container__title monday-style-step-indicator-component--type-primary__text-container__title monday-style-step-indicator-component--status-pending__text-container__title"
      >
        <span
          className="hidden-text--wrapper"
          id="hiddenText"
        >
          pending
        </span>
         
        <span
          className="monday-style-step-indicator-component__text-container__title__text monday-style-step-indicator-component--type-primary__text-container__title__text monday-style-step-indicator-component--status-pending__text-container__title__text"
        >
          Pending
        </span>
      </div>
      <span
        className="monday-style-step-indicator-component__text-container__subtitle__text monday-style-step-indicator-component--type-primary__text-container__subtitle__text monday-style-step-indicator-component--status-pending__text-container__subtitle__text"
      >
        Pending Subtitle
      </span>
    </div>
  </li>
</ol>
`;
